Bug fix Now it doesn't overflow the entire page; only the small parts.

--- a/css/theme.css
+++ b/css/theme.css
@@ -93,6 +93,7 @@ body > div, body > div > div /* The different spacers that make the layout */
 {
 	display: flex;
 	flex-grow: 1;
+	max-height: calc(100% - 3rem); /* Avoids overgrowing */
 }
 
 
